# SLM-Hologram-FOI-RSS-Leseleuc

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: CODE_REVIEW.md  INSIGHTS.md
docs/refs/papers/: slm-hologram-rayleigh-tweezers.md
docs/superpowers/plans/: 2026-06-08-gaussian-illumination-preset.md  2026-06-14-triangular-lattice.md
docs/superpowers/specs/: 2026-06-14-triangular-lattice-design.md
scripts/: _runner.py  bench_stability.py  diag_scaling.py  fig1b.py  fig3.py  optimize_mask.py  run_all.py  table1.py
src/foitweezers/: __init__.py  aberration.py  config.py  design.py  forward.py  io.py  losses.py  metrics.py  targets.py
tests/: test_chained.py  test_core.py  test_numerical_stability.py  test_torch.py  test_triangular.py
